Fix for broken css in webkit for title bars

--- a/Allura/allura/templates/jinja_master/site_style.css
+++ b/Allura/allura/templates/jinja_master/site_style.css
@@ -904,7 +904,9 @@ ul.ui-tab li a {
 }
 .base .pad .title, .title, .base .pad .title a, .title a, .actions a {color: rgb(255,255,255) !important;}
 .base .pad .title, .title {
-    background:-moz-linear-gradient(100% 100% 90deg, #222327, #36373B 100%) repeat scroll 0 0 #36373B;
+    background-color: #222327;
+    background-image: -webkit-gradient(linear, 0% 85%, 0% 100%, from(#222327), to(#36373B));
+    background: -moz-linear-gradient(100% 100% 90deg, #222327, #36373B 100%) repeat scroll 0 0 #36373B;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 		-webkit-border-top-left-radius: 5px;
